# MonoPlusPlus

./: README.md
hoarding/: CMakeLists.txt  board.cpp  board.h  dice.cpp  dice.h  game.cpp  game.h  game_state.cpp  game_state.h  main.cpp  makefile  move.cpp  move.h  player.cpp  player.h  property.cpp  property.h  random.cpp  random.h  rule.cpp  rule.h
